add endpoint for get recipe info
