# backend/api/client.go
@@ -2,6 +2,7 @@ package api
 
 import (
 	"encoding/json"
+	"fmt"
 	"io"
 	"net/http"
 )
@@ -15,7 +16,7 @@ func NewClient(apiKey string) *Client {
 	return &Client{apiKey: apiKey}
 }
 
-func (client *Client) SearchRecipe(q string) *RecipeSearchResp {
+func (client *Client) SearchRecipes(q string) *RecipeSearchResp {
 	url := "https://api.spoonacular.com/recipes/complexSearch" // API endpoint
 	httpClient := http.Client{}
 	req, err := http.NewRequest("GET", url, nil) // create GET request
@@ -39,6 +40,33 @@ func (client *Client) SearchRecipe(q string) *RecipeSearchResp {
 		panic(err)
 	}
 	output := &RecipeSearchResp{}
+	err = json.Unmarshal(body, output)
+	if err != nil {
+		panic(err)
+	}
+	return output
+}
+
+func (client *Client) GetRecipeInfo(id string) *RecipeInfo {
+	url := fmt.Sprintf("https://api.spoonacular.com/recipes/%s/information", id) // API endpoint
+	httpClient := http.Client{}
+	req, err := http.NewRequest("GET", url, nil) // create GET request
+	if err != nil {
+		panic(err)
+	}
+	req.Header.Add("x-api-key", client.apiKey)
+
+	resp, err := httpClient.Do(req)
+	if err != nil {
+		panic(err)
+	}
+	defer resp.Body.Close()
+
+	body, err := io.ReadAll(resp.Body)
+	if err != nil {
+		panic(err)
+	}
+	output := &RecipeInfo{}
 	err = json.Unmarshal(body, output)
 	if err != nil {
 		panic(err)
